--- a/sources.yaml
+++ b/sources.yaml
@@ -1,60 +1,20 @@
+
 feeds:
-- id: msft_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0000789019&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
+- id: JP Morgan investor relations
+  label: JP Morgan investor relations (press releases)
+  url: https://jpmorganchaseco.gcs-web.com/rss/news-releases.xml
   tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: aapl_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0000320193&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
+  - press
+- id: intel news
+  label: Intel newsroom (press releases)
+  url: https://www.intc.com/news-events/press-releases/rss
   tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: tsla_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001318605&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
+  - press
+- id: cisco_news
+  label: Cisco newsroom (press releases)
+  url: https://investor.cisco.com/rss/pressrelease.aspx
   tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: nvda_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001045810&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
-  tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: amzn_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001018724&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
-  tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: meta_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001326801&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
-  tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: googl_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001652044&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
-  tags:
-  - sec
-  - 8-k
-  - guidance_candidate
-- id: jpm_8k
-  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0000019617&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
-  format: atom
-  tags:
-  - sec
-  - 8-k
-  - guidance_candidate
+  - press
 - id: microsoft_news
   label: Microsoft newsroom (press releases)
   url: https://news.microsoft.com/feed/
@@ -3525,6 +3485,62 @@ feeds:
   - guidance_candidate
 - id: zbh_8k
   url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001136869&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: msft_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0000789019&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: aapl_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0000320193&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: tsla_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001318605&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: nvda_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001045810&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: amzn_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001018724&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: meta_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001326801&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: googl_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0001652044&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
+  format: atom
+  tags:
+  - sec
+  - 8-k
+  - guidance_candidate
+- id: jpm_8k
+  url: https://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=0000019617&type=8-K&dateb=&owner=exclude&count=100&search_text=&output=atom
   format: atom
   tags:
   - sec
