claude code cooking

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,38 @@
 # FinanceProject Environment Configuration
-# Copy this file to .env and fill in your values
+# Copy this file to .env and fill in your API keys
 
 # =============================================================================
-# REQUIRED: At least one LLM API key
+# LLM PROVIDERS — paste at least one key
 # =============================================================================
 
-# DeepSeek API (default provider, recommended for cost efficiency)
+# DeepSeek  (default provider — best cost/quality baseline)
+# Models: deepseek-chat (V3)
+# Get key: https://platform.deepseek.com/api_keys
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
-# OpenAI API (optional, for direct OpenAI access)
-OPENAI_API_KEY=your_openai_api_key_here
+# Google Gemini  ★ recommended for elaborate prompts / long context
+# Models: gemini-2.5-flash, gemini-2.0-flash
+# Get key: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# GitHub Models API (optional, for GitHub-hosted models like GPT-4o)
-GITHUB_MODELS_API_KEY=your_github_models_api_key_here
+# OpenAI Direct  (GPT-4.1 mini recommended over GPT-4o for extraction)
+# Models: gpt-4.1-mini, gpt-4.1, gpt-4o
+# Get key: https://platform.openai.com/api-keys
+OPENAI_DIRECT_API_KEY=your_openai_api_key_here
+
+# Anthropic / Claude  (Haiku 4.5 = fastest/cheapest Claude)
+# Models: claude-haiku-4-5-20251001, claude-sonnet-4-6
+# Get key: https://console.anthropic.com/settings/keys
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# GitHub Models  (free-tier OpenAI-compatible endpoint via GitHub)
+# Models: gpt-4o, gpt-4o-mini
+# Get token: https://github.com/settings/tokens (needs models:read scope)
+GITHUB_MODELS_API_KEY=your_github_pat_here
 
 # =============================================================================
-# OPTIONAL: Configuration overrides
+# OTHER
 # =============================================================================
 
-# Contact email for User-Agent strings (required by SEC.gov for identification)
-# Default: your-email@example.com
+# Contact email for User-Agent strings (required by SEC.gov)
 CONTACT_EMAIL=your-email@example.com
